# cookiecutter-django-rest

./: AGENTS.md  pyproject.toml
.daemon/: CONSTRAINTS.md  goal.md  memory.md
.daemon/specs/cookiecutter-django-rest-modernization/: plan.md  principles.md  spec.md  tasks.md
.daemon/specs/maintenance-dependency-updates/: plan.md  principles.md  spec.md  tasks.md
.daemon/specs/maintenance-modernization/: plan.md  principles.md  spec.md  tasks.md
.daemon/specs/modernize-cookiecutter-django-rest/: plan.md  principles.md  spec.md  tasks.md
.github/workflows/: ci.yml
{{cookiecutter.github_repository_name}}/: Dockerfile  requirements.txt
